# kiber

./: .gitignore  Makefile  README.md  geogebra-export.ggb  kiber  main.cpp
sem_1/: Makefile  geogebra-export.ggb
sem_2/: move.py  spiderpi-pres-1.pptx  spiderpi-pres-2.pptx  spiderpi-pres-3.pptx
sem_3/: gait.py  in.txt  main.py  move.py  sonar.py  test.py  unload.py
sem_3/report/: pres.pptx  report.tex
sem_4/: pigpio  pwm.py
sem_4/code/: Makefile  main.py  move.py  pigpio  ssr.cpp
sem_4/stuff/diff_eq_solution/: CMakeLists.txt  DiffSolution.cpp  DiffSolution.h  DiffSystem.cpp  DiffSystem.h  main.cpp  matplotlibcpp.h  quaternary.h  spider_constants.h
sem_4/stuff/maple/: Spider_1m2.mw  SysEquations.mw  Updated_constants.mw  untitled.mw  Изображения ноги.mw
sem_4/stuff/maple/Maple/Backup/: _home_nikolai_hexapod_project_maple_Spider_0_MAS.bak  _home_nikolai_hexapod_project_maple_Spider_1 (copy)_MAS.bak  _home_nikolai_hexapod_project_maple_Spider_10_MAS.bak  _home_nikolai_hexapod_project_maple_Spider_11_MAS.bak  _home_nikolai_hexapod_project_maple_Spider_12_MAS.bak  _home_nikolai_hexapod_project_maple_Spider_1_MAS.bak  _home_nikolai_hexapod_project_maple_Spider_1m20_MAS.bak  _home_nikolai_hexapod_project_maple_Spider_1m21_MAS.bak  _home_nikolai_hexapod_project_maple_new0_MAS.bak  (+67 more)
sem_4/stuff/maple/old_docs/: 1_solution.tex  2.tex  3.tex  LatexFile  Spider.8.12.2020.mw  Spider.mw  Spider_0.mw  Spider_1.mw  Spider_16.12.2020.mw  latex.tex  latex_printing.mw  new.mw  tex1  tex1.tex  Кинематика_паук 2 (copy).mw  Мисюрин_ред (copy).mw
sem_4/stuff/report/: main.tex
(+1 files in other folders)
